# rc-8

./: Cargo.toml  README.md
src/: defaults.rs  main.rs
src/backend/: error.rs  instruction.rs  interfaces.rs  mod.rs
src/frontend/: error.rs  handle.rs  mod.rs  sound.rs
src/ui/: file_picker.rs  mod.rs
