[package]
name = "rc-8"
version = "0.1.0"
authors = ["SegmentationViolator <segmentationviolator@proton.me>"]
edition = "2021"
description = "a CHIP-8 emulator"

[dependencies]
bitflags = "1.3.2"
bitvec = "1.0.1"
clap = { version = "4.2.4", features = ["derive"] }
eframe = "0.20.1"
egui = "0.20.1"
egui_file = "0.5.4"
rand = "0.8.5"
rodio = "0.17.0"
